# workshop-agentic-ai

./: README.md  index-sixpivot.html  index.html
engine/: modern-enhancements.js  modern.css  thushan.css
engine/components/ai/: ai-components.css  bolt-prompt.css  bolt.css  chatgpt-prompt.css  chatgpt.css  claude-prompt.css  claude.css  perplexity-prompt.css  v0-prompt.css  v0.css
engine/components/terminal/: terminal.css
engine/plugin/highlight/: claude-dark.css
engine/theme/: modern-dark.css  sixpivot-dark.css  sixpivot-modern.css
examples/: agentic-mentorloop.md  charts.html  index.html  mermaid.html  terminal-basic.html  terminal-vscode.html
examples/agentic-mentorloop-py/: .env.example  .gitignore  README.md
examples/agentic-mentorloop-py/agentic_mentorloop/: __main__.py
examples/agentic-mentorloop-py/agentic_mentorloop/brain/: deterministic.py  index.py
examples/agentic-mentorloop-ts/: README.md  package-lock.json  package.json
examples/agentic-mentorloop-ts/src/: cli.ts
examples/agentic-mentorloop-ts/src/rag/: tips.ts
examples/data/: checkins.csv  goals.csv  messages.csv  pairings.csv  programmes.json  tips.json  users.csv
examples/edna-py/edna-langchain/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/edna-py/edna-langchain/edna/: __init__.py  classify.py  cli.py  config.py  evaluator.py  features.py  io_loaders.py  llm_provider.py  planner.py  prompts.py  retriever.py  suggest.py  types.py  utils_time.py
examples/edna-py/edna-langchain/tests/: test_classify.py  test_features.py  test_time_heuristics.py
(+13 files in other folders)
